--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <title>Login</title>
+    <title>Sign Up</title>
 
 </head>
 <body>
@@ -21,6 +21,10 @@ style="background-image: url('https://images.unsplash.com/photo-1486520299386-6d
 					<span class="text-sm text-gray-900">Welcome back</span>
 					<h1 class="text-2xl font-bold">Login to your account</h1>
 				</div>
+        <div class="my-3">
+					<label class="block text-md mb-2" for="name">Name</label>
+					<input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="name" placeholder="Enter Name">
+				</div>
 				<div class="my-3">
 					<label class="block text-md mb-2" for="username">Username</label>
 					<input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="username" placeholder="Enter Username">
@@ -32,10 +36,9 @@ style="background-image: url('https://images.unsplash.com/photo-1486520299386-6d
 					
 						
 						<div class="">
-							<button class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Login now</button>
+							<button class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Sign Up</button>
 						</div>
 			</form>
-			<p class="mt-8"> Dont have an account? <a href="/signUp" class="cursor-pointer text-sm text-blue-600"> Join free today</a></p>
 		</div>
 	</div>
 </div>
