--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,57 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <title>Home</title>
 </head>
-<body>
+<body class="bg-no-repeat bg-center bg-cover" style="background-image: url('./home.jpg')">
+  <div class="min-h-screen">
+<div class="flex justify-end">
+	<div class="bg-white min-h-screen w-1/3 flex justify-center items-center bg-opacity-90">
+		<div>
+        <form method="POST" action="/home">
+          <div>
+            <h1 class="text-2xl font-bold text-center">Book Tickets</h1>
+          </div>
+          <div class="my-3">
+            <label class="block text-md mb-2" for="name">Name</label>
+            <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="name" placeholder="Enter Name">
+          </div>
+          <div class="my-3">
+            <label class="block text-md mb-2" for="email">email</label>
+            <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="email" name="email" placeholder="Enter Email">
+          </div>
+          <div class="mt-5">
+            <label class="block text-md mb-2" for="movies">Movies</label>
+            <select class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" name="movies" id="movie">
+              <option value="bw">Black Widow</option>
+              <option value="sc">Shang-Chi and the Legend of the Ten Rings</option>
+              <option value="et">Eternals</option>
+              <option value="sp">Spider-Man: No Way Home (with Sony)	</option>
+              <option value="ds">Doctor Strange in the Multiverse of Madness		</option>
+              <option value="th">Thor: Love and Thunder		</option>
+              <option value="bp">Black Panther: Wakanda Forever	</option>
+            </select>
+            <div class="mt-5">
+              <label class="block text-md mb-2" for="numTickets">Number of Tickets</label>
+            <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="number" name="numTickets" placeholder="Enter No. of Tickets">
+            </div>
+        </div>
+            
+              
+              <div class="">
+                <button class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Confirm</button>
+              </div>
+        </form>
+        </div>
+        </div>
+        </div>
+        </div>
+
+
+
+
   
+  <br><br>
 </body>
 </html>
