--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,11 @@
     <title>Login</title>
 
 </head>
-<body>
+<body style="background-image: url('./login.jpg')">
     <!-- Create By Joker Banny -->
-<div class="min-h-screen bg-no-repeat bg-cover bg-center"
-style="background-image: url('https://images.unsplash.com/photo-1486520299386-6d106b22014b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')">
+<div class="min-h-screen ">
 <div class="flex justify-end">
-	<div class="bg-white min-h-screen w-1/2 flex justify-center items-center">
+	<div class="bg-white min-h-screen w-1/3 flex justify-center items-center bg-opacity-90">
 		<div>
 
 			<form method="POST" action="/">
