--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -16,7 +16,7 @@ style="background-image: url('https://images.unsplash.com/photo-1486520299386-6d
 	<div class="bg-white min-h-screen w-1/2 flex justify-center items-center">
 		<div>
 
-			<form method="POST" action="/">
+			<form method="POST" action="/signUp">
 				<div>
 					<span class="text-sm text-gray-900">Welcome back</span>
 					<h1 class="text-2xl font-bold">Login to your account</h1>
