--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 <div class="flex justify-end">
 	<div class="bg-white min-h-screen w-1/3 flex justify-center items-center bg-opacity-90">
 		<div>
-        <form method="POST" action="/home">
+        <form method="POST" action="/booking">
           <div>
             <h1 class="text-2xl font-bold text-center">Book Tickets</h1>
           </div>
@@ -25,8 +25,8 @@
             <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="email" name="email" placeholder="Enter Email">
           </div>
           <div class="mt-5">
-            <label class="block text-md mb-2" for="movies">Movies</label>
-            <select class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" name="movies" id="movie">
+            <label class="block text-md mb-2" for="movie">Movies</label>
+            <select class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" name="movie" id="movie">
               <option value="bw">Black Widow</option>
               <option value="sc">Shang-Chi and the Legend of the Ten Rings</option>
               <option value="et">Eternals</option>
@@ -36,8 +36,8 @@
               <option value="bp">Black Panther: Wakanda Forever	</option>
             </select>
             <div class="mt-5">
-              <label class="block text-md mb-2" for="numTickets">Number of Tickets</label>
-            <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="number" name="numTickets" placeholder="Enter No. of Tickets">
+              <label class="block text-md mb-2" for="numTicket">Number of Tickets</label>
+            <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="number" name="numTicket" placeholder="Enter No. of Tickets">
             </div>
         </div>
             
