--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -10,16 +10,16 @@
 </head>
 <body>
     <!-- Create By Joker Banny -->
-<div class="min-h-screen bg-no-repeat bg-cover bg-center"
-style="background-image: url('https://images.unsplash.com/photo-1486520299386-6d106b22014b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')">
+<body style="background-image: url('./login.jpg')">
+    <!-- Create By Joker Banny -->
+<div class="min-h-screen ">
 <div class="flex justify-end">
-	<div class="bg-white min-h-screen w-1/2 flex justify-center items-center">
+	<div class="bg-white min-h-screen w-1/3 flex justify-center items-center bg-opacity-90">
 		<div>
 
 			<form method="POST" action="/signUp">
 				<div>
-					<span class="text-sm text-gray-900">Welcome back</span>
-					<h1 class="text-2xl font-bold">Login to your account</h1>
+					<h1 class="text-2xl font-bold">Create Account Here</h1>
 				</div>
         <div class="my-3">
 					<label class="block text-md mb-2" for="name">Name</label>
@@ -39,6 +39,7 @@ style="background-image: url('https://images.unsplash.com/photo-1486520299386-6d
 							<button class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Sign Up</button>
 						</div>
 			</form>
+			<p class="mt-8"> Already have an account? <a href="/" class="cursor-pointer text-sm text-blue-600"> Login Here</a></p>
 		</div>
 	</div>
 </div>
