Finalized with creating ids

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,32 +18,32 @@
           </div>
           <div class="my-3">
             <label class="block text-md mb-2" for="name">Name</label>
-            <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="name" placeholder="Enter Name">
+            <input  id="name" class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="name" placeholder="Enter Name">
           </div>
           <div class="my-3">
             <label class="block text-md mb-2" for="email">email</label>
-            <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="email" name="email" placeholder="Enter Email">
+            <input id="email" class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="email" name="email" placeholder="Enter Email">
           </div>
           <div class="mt-5">
             <label class="block text-md mb-2" for="movie">Movies</label>
             <select class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" name="movie" id="movie">
-              <option value="bw">Black Widow</option>
-              <option value="sc">Shang-Chi and the Legend of the Ten Rings</option>
-              <option value="et">Eternals</option>
-              <option value="sp">Spider-Man: No Way Home (with Sony)	</option>
-              <option value="ds">Doctor Strange in the Multiverse of Madness		</option>
-              <option value="th">Thor: Love and Thunder		</option>
-              <option value="bp">Black Panther: Wakanda Forever	</option>
+              <option value="Black Widow">Black Widow</option>
+              <option value="Shang-Chi and the Legend of the Ten Rings">Shang-Chi and the Legend of the Ten Rings</option>
+              <option value=">Eternals">Eternals</option>
+              <option value="Spider-Man: No Way Home (with Sony)">Spider-Man: No Way Home (with Sony)	</option>
+              <option value="Doctor Strange in the Multiverse of Madness">Doctor Strange in the Multiverse of Madness		</option>
+              <option value="Thor: Love and Thunder">Thor: Love and Thunder		</option>
+              <option value="Black Panther: Wakanda Forever">Black Panther: Wakanda Forever	</option>
             </select>
             <div class="mt-5">
               <label class="block text-md mb-2" for="numTicket">Number of Tickets</label>
-            <input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="number" name="numTicket" placeholder="Enter No. of Tickets">
+            <input id="numTicket" class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="number" name="numTicket" placeholder="Enter No. of Tickets">
             </div>
         </div>
             
               
               <div class="">
-                <button class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Confirm</button>
+                <button id="submit" class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Confirm</button>
               </div>
         </form>
         </div>
