--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,19 +22,19 @@
 				</div>
 				<div class="my-3">
 					<label class="block text-md mb-2" for="username">Username</label>
-					<input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="username" placeholder="Enter Username">
+					<input id="username" class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="username" placeholder="Enter Username">
 				</div>
 				<div class="mt-5">
 					<label class="block text-md mb-2" for="password">Password</label>
-					<input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="password" name="password" placeholder="Enter Password">
+					<input id="password" class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="password" name="password" placeholder="Enter Password">
 			</div>
 					
 						
 						<div class="">
-							<button class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Login now</button>
+							<button id="submit" class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Login now</button>
 						</div>
 			</form>
-			<p class="mt-8"> Dont have an account? <a href="/signUp" class="cursor-pointer text-sm text-blue-600"> Join free today</a></p>
+			<p class="mt-8"> Dont have an account? <a id= "signup"href="/signUp" class="cursor-pointer text-sm text-blue-600"> Join free today</a></p>
 		</div>
 	</div>
 </div>
