--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -23,20 +23,20 @@
 				</div>
         <div class="my-3">
 					<label class="block text-md mb-2" for="name">Name</label>
-					<input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="name" placeholder="Enter Name">
+					<input id="name" class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="name" placeholder="Enter Name">
 				</div>
 				<div class="my-3">
 					<label class="block text-md mb-2" for="username">Username</label>
-					<input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="username" placeholder="Enter Username">
+					<input id="username" class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="text" name="username" placeholder="Enter Username">
 				</div>
 				<div class="mt-5">
 					<label class="block text-md mb-2" for="password">Password</label>
-					<input class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="password" name="password" placeholder="Enter Password">
+					<input id="password" class="px-4 w-full border-2 py-2 rounded-md text-sm outline-none" type="password" name="password" placeholder="Enter Password">
 			</div>
 					
 						
 						<div class="">
-							<button class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Sign Up</button>
+							<button id="submit"class="mt-4 mb-3 w-full bg-green-500 hover:bg-green-400 text-white py-2 rounded-md transition duration-100">Sign Up</button>
 						</div>
 			</form>
 			<p class="mt-8"> Already have an account? <a href="/" class="cursor-pointer text-sm text-blue-600"> Login Here</a></p>
